# hackthemachine-unmanned-track-3

./: .flake8  .gitignore  Dockerfile.sagemaker  Dockerfile.sagemaker.neural-mmo  README.md  cdk.json  package.json  pyproject.toml  tsconfig.json  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  nvm-autoinstall.sh
AIS_Paths/: AIS_paths.ipynb  ais_gameboard.csv  ais_paths.csv  centers72.csv  df_ais_index.csv  df_ais_index_coord.csv  df_centers_clean.csv
Dash_Visualization/: 26by26.json  72by72.json  Grid_Lat_Lon_to_Json.py  Grid_Lat_Lon_to_Json240.py  Grid_Lat_Lon_to_Json72.py  application.py  grid_data_72x721.csv  grid_data_72x722.csv  para_plot_v2.html  requirements.txt
Dash_Visualization/applications/: application_blue72.py  application_blue722.py  application_blue72flat.py  application_blue_sd_git2.py  application_px240.py  application_px62.py  application_rlroutes.py
Dash_Visualization/synthetic_data/: grid_data_20x20.csv  grid_data_24x24.csv
Dash_Visualization/synthetic_data/AIS/: Cargo.csv  PassengerVessel.csv  Tanker.csv  ais_paths3.csv
Dash_Visualization/synthetic_data/Grids/: 12milefileid.csv  16by16new.json  20by20.json  24by24.json  24toone.csv  24tozero.csv  26nmo.csv  72x72map.csv  centers.csv  cloud_ceilings.csv  cloud_covers72.csv  nmmo1.csv  precipitations72.csv  waves.csv  waves72.csv
Dash_Visualization/synthetic_data/Navigability/: NoNavigationPoints.csv  NoNavigationPoints2.csv  twilights.csv
Dash_Visualization/synthetic_data/Points_Of_Origin_Destination/: Airbases.csv  Destinations.csv  Destinations1.csv  Origins.csv  Origins1.csv
Dash_Visualization/synthetic_data/Routes/: CarribeanRoutes_Track0.csv  CarribeanRoutes_Track15cent.csv  Dest0_s.csv  Destroyer3_r.csv  DestroyerPath15cent.csv  Destroyer_220.csv  Heli_00.csv  Heli_000.csv  Heli_11.csv  Heli_33.csv  HistoricalTraffickingRoutePoints.csv  P8car.csv  P8pac_2.csv  PTDS5.csv  Route_test.csv  car_moved_2.csv  heli72.csv  p8_72.csv  pac_moved.csv  pac_moved0.csv  rltracks1.csv  rosa3.csv  rosa72.csv  rosa72_part2.csv  route_full.csv  sd_line_c.csv  sd_line_p_1.csv  sd_line_p_2.csv  t0.csv  t8000.csv  timedf.csv  track_100.csv  track_1000.csv  track_2000.csv  track_300.csv  track_50.csv  track_500.csv  warship72.csv
Dash_Visualization/synthetic_data/Targets/: Blackroute.csv
Dash_Visualization/synthetic_data/Weather/Visibility/: ceilingtime.csv  fog3.csv  fogtime.csv  higher.csv  highest.csv  medium_clouds.csv
data/: grid001_100km_27x24.json  grid001_100km_27x24.nc  grid001_100km_27x24.npy  grid002_100km_24x24.json  grid002_100km_24x24.nc  grid002_100km_24x24.npy  grid003_100km_26x26.json  grid003_100km_26x26.nc  grid003_100km_26x26.npy  grid003_100km_26x26_lonlat.json  grid003_100km_26x26_waves.nc  grid003_100km_26x26_waves.npy  grid004_010deg_180x180.json  grid004_010deg_180x180.nc  grid004_010deg_180x180.npy  grid004_025deg_72x72.json  grid004_025deg_72x72.nc  grid004_025deg_72x72.npy  grid004_025deg_72x72_cloud_ceiling.npy  grid004_025deg_72x72_cloud_cover.npy  grid004_025deg_72x72_precip.npy  grid004_025deg_72x72_wave_height.npy  lonlat_grid003_base_path000.csv  lonlat_grid003_island_path000.csv  waves_ww3_20211207.nc  weather_gfs_20211207.nc
docs/: CNAME  asset-manifest.json  index.html
docs/static/css/: main.20b1861e.chunk.css  main.20b1861e.chunk.css.map
docs/static/js/: 2.2db39d2b.chunk.js.LICENSE.txt  2.e3771117.chunk.js  2.e3771117.chunk.js.map  3.91907f6d.chunk.js  3.91907f6d.chunk.js.map  3.f879ea96.chunk.js  3.f879ea96.chunk.js.map  main.388b5541.chunk.js  main.388b5541.chunk.js.map  main.74b8d392.chunk.js  main.74b8d392.chunk.js.map  runtime-main.6488d1b7.js  runtime-main.6488d1b7.js.map  runtime-main.ebe10950.js  runtime-main.ebe10950.js.map
infrastructure/: create-sagemaker-algorithm.ts  describe-sagemaker-algorithm.ts
infrastructure/sagemaker-algorithm/: create.ts  delete.ts  describe.ts  settings.js  update.ts
infrastructure/stacks/: app.binary.ts  sagemaker.ts
model/: pyproject.toml
model/client/: run.sh
model/environment/scripts/: generate.py  read_grid.py  read_wave.py  regrid_weather_and_wave.py  scale.py
model/ray/: patch.diff  patch.py
model/server/: .gitignore  Forge.py  pyproject.toml  sagemaker_job.py  sagemaker_job.test.py
model/server/neural_mmo/forge/blade/core/: _config.py  _terrain.py  config.py  map.py  realm.py  terrain.py  tile.py
model/server/neural_mmo/forge/blade/entity/: entity.py  player.py
model/server/neural_mmo/forge/blade/io/action/: static.py
model/server/neural_mmo/forge/blade/io/stimulus/: static.py
model/server/neural_mmo/forge/blade/lib/: _material.py  enums.py  material.py
model/server/neural_mmo/forge/blade/systems/: achievement.py  combat.py  experience.py
model/server/neural_mmo/forge/blade/systems/ai/: dynamic_programming.py  policy.py
model/server/neural_mmo/forge/trinity/: dataframe.py  env.py
model/server/neural_mmo/forge/trinity/scripted/: move.py
model/server/projekt/: config.py  rllib_wrapper.py
pseudo-code/: asset_reward.py  create_force_package.py  sensors.json  target_reward.py  vehicles.json
rl_examples/: Gameboard_4326.geojson  Gameboard_4326_centrepoints.geojson  Gridworld_Sandbox.ipynb  README.md
site/: README.md  package.json  sample-data.json  tsconfig.json
site/public/: index.html  manifest.json
site/src/: App.css  App.tsx  Kepler.tsx  index.tsx  reducer.tsx  store.tsx  types.d.ts
sm-ray/: pyproject.toml  sm-train.ipynb
sm-ray/configs/: sagemaker_config.yaml
sm-ray/src/: train-local.py  train-sagemaker.py  visualize.py
sm-ray/src/custom/: callbacks.py
sm-ray/src/custom/envs/: drug_runner.py
sm-ray/src/custom/envs/assets/vehicles/: destroyer.json  panga.json
sm-ray/src/custom/models/: custom_cnn_torch.py
sm-ray/src/utils/: loader.py
(+72 files in other folders)
