[tool.poetry]
name = "hackthemachine-unmanned-track-3"
version = "1.0.0"
description = "HACKtheMACHINE: Unmanned Track 3"
authors = [
  "Alex Nickel <alnickel+htmu-user@amazon.com>",
  "Amy Tippl <attippl+htmu-user@amazon.com>",
  "Andrew Maksimovich <andrewma+htmu-user@amazon.com>",
  "Chris Canniff <ccanniff1+htmu-user@gmail.com>",
  "Dennis Torres <dtorres+htmu-user@spear.ai>",
  "Jackson Koehler <jackson.koehler+htmu-user@usacet.com>",
  "Jaim Coddington <jcoddington+htmu-user@spear.ai>",
  "Joseph Obeid <jobeid+htmu-user2@spear.ai>",
  "Kevin Rosa <kevin+htmu-user@current-lab.com>",
  "Michael Hunter <mhunter+htmu-user@spear.ai>"
]

[tool.poetry.dependencies]
aiohttp = "~3.7.3"
aioredis = "^1"
dm-tree = "^0.1.6"
flexdict = "^0.0.1-alpha.1"
imageio = "~2.8"
importlib-resources = "^5.4.0"
lz4 = "^3.1.3"
neural-mmo = "^1.5.2"
numpy = "~1.21"
opencv-python = "^4.5.4"
pandas = "^1.3.4"
python = "3.8.10"
ray = {version = "~1.5", extras = ["default"]}
tabulate = "^0.8.9"
tensorboardX = "^2.4.1"
torch = "^1.10.0"
trueskill = "~0.4"
wandb = "^0.12.7"
xarray = "^0.20.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
sagemaker = "^2.70.0"
wemake-python-styleguide = "^0.15.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
