[tool.poetry]
name = "hackthemachine-unmanned-track-3"
version = "1.0.0"
description = "HACKtheMACHINE: Unmanned Track 3"
authors = [
  "Alex Nickel <alnickel+htmu-user@amazon.com>",
  "Amy Tippl <attippl+htmu-user@amazon.com>",
  "Andrew Maksimovich <andrewma+htmu-user@amazon.com>",
  "Chris Canniff <ccanniff1+htmu-user@gmail.com>",
  "Dennis Torres <dtorres+htmu-user@spear.ai>",
  "Jackson Koehler <jackson.koehler+htmu-user@usacet.com>",
  "Jaim Coddington <jcoddington+htmu-user@spear.ai>",
  "Joseph Obeid <jobeid+htmu-user2@spear.ai>",
  "Kevin Rosa <kevin+htmu-user@current-lab.com>",
  "Michael Hunter <mhunter+htmu-user@spear.ai>"
]

[tool.poetry.dependencies]
imageio = "^2.13.3"
netCDF4 = "^1.5.8"
python = "3.8.10"
xarray = "^0.20.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
sagemaker = "^2.70.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
