[tool.poetry]
name = "hackthemachine-unmanned-track-3"
version = "1.0.0"
description = "HACKtheMACHINE: Unmanned Track 3"
authors = [
  "Alex Nickel <alnickel+htmu-user@amazon.com>",
  "Amy Tippl <attippl+htmu-user@amazon.com>",
  "Andrew Maksimovich <andrewma+htmu-user@amazon.com>",
  "Chris Canniff <ccanniff1+htmu-user@gmail.com>",
  "Dennis Torres <dtorres+htmu-user@spear.ai>",
  "Jackson Koehler <jackson.koehler+htmu-user@usacet.com>",
  "Jaim Coddington <jcoddington+htmu-user@spear.ai>",
  "Joseph Obeid <jobeid+htmu-user2@spear.ai>",
  "Kevin Rosa <kevin+htmu-user@current-lab.com>",
  "Michael Hunter <mhunter+htmu-user@spear.ai>"
]

[tool.poetry.dependencies]
PettingZoo = {version = "^1.14.0", extras = ["magent"]}
boto3 = "^1.20.23"
python = "3.8.10"
ray = {version = "~1.6", extras = ["default", "rllib"]}
torch = "^1.10"
pandas = "^1.3.5"
SuperSuit = "^3.3.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
