[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Dennis Torres <djtorres0@gmail.com>"]

[tool.poetry.dependencies]
Twisted = "~19.2"
aiohttp = "~3.7.3"
aioredis = "^1"
autobahn = "~19.3"
bokeh = "~2.2"
cloudpickle = "~1.2"
dm-tree = "~0.1"
fire = "^0.4.0"
flexdict = "^0.0.1-alpha.1"
gym = "~0.17"
imageio = "~2.8"
importlib-resources = "^5.4.0"
lz4 = "^3.1.3"
matplotlib = "~3.1"
numpy = "~1.21"
opencv-python = "^4.5.4"
pandas = "^1.3.4"
python = "~3.9"
ray = {path = "./ray-neural-mmo/python", extras = ["default", "rllib"]}
redis = "~3.5"
setproctitle = "~1.1"
sphinx-rtd-theme = "~0.5"
tabulate = "^0.8.9"
tensorboardX = "^2.4.1"
torch = "^1.10.0"
tqdm = "~4.61"
trueskill = "~0.4"
vec-noise = "~1.1"
wandb = "^0.12.7"
neural-mmo = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"